--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "timeo-tablet",
-  "short_name": "Timeo",
+  "short_name": "Tablet",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
